Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .env
-/hello-world/node_modules/
-/resistor-color/node-modules/
-/two-fer/node-modules/
+./hello-world/node_modules/
+./resistor-color/node-modules/
+./two-fer/node-modules/
